src/objects/Campus_Engagement_Details__c.object
<CustomObject>
    <description>This is where the campus engagement details live</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campus Engagement Details</relationshipLabel>
        <relationshipName>Campus_Engagement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus_Stakeholder_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campus Stakeholder Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <label>Engagement Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intro_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intro Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Campuses__c</fullName>
        <label>Multiple Campuses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Money_101_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Courses Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Campus__c</fullName>
        <label>Residential Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALT_Ambassador_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Ambassador Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Communication_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Communication Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Faculty_Staff_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Faculty/Staff Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Requirement</label>
        <type>Checkbox</type>
    </fields>
    <label>Campus Engagement Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campus Engagement Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campus Engagement Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>